# GradientspaceIO

./: .gitignore  CMakeLists.txt  CMakePresets.json  GradientspaceIO.Build.cs  LICENSE  README.md
Private/: GradientspaceIODLLMain.cpp  GradientspaceIOModule.cpp
Private/MeshIO/: OBJFormatData.cpp  OBJReader.cpp  OBJWriter.cpp  STLReader.cpp  STLWriter.cpp  parse_utils.h
Public/: GradientspaceIOModule.h  GradientspaceIOPlatform.h
Public/MeshIO/: OBJFormatData.h  OBJReader.h  OBJWriter.h  STLReader.h  STLWriter.h
